--- a/.env
+++ b/.env
@@ -1,8 +1,5 @@
-FRONT_PORT = 8080
-BACK_PORT = 8081
-
 POSTGRES_HOST=localhost
-POSTGRES_PORT=5432
-POSTGRES_DB=uams
-POSTGRES_USER=hs
-POSTGRES_PASSWORD=qweqwe
+POSTGRES_PORT={your dbport}
+POSTGRES_DB={your dbname}
+POSTGRES_USER={your username}
+POSTGRES_PASSWORD={your password}
