--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-# backend/config/application.yml
 backend/HELP.md
 backend/.gradle
 backend/build/
@@ -42,4 +41,5 @@ backend/out/
 /frontend/node_modules/
 
 ### ENV File ###
-# .env
+.env
+backend/config/application.yml
