frontend & backend setting changed

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 POSTGRES_HOST=localhost
-POSTGRES_PORT={your dbport}
-POSTGRES_DB={your dbname}
-POSTGRES_USER={your username}
-POSTGRES_PASSWORD={your password}
+POSTGRES_PORT=5432
+POSTGRES_DB=uams
+POSTGRES_USER=hs
+POSTGRES_PASSWORD=qweqwe
