--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "pinia": "^2.0.28",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4",
+    "v-click-outside": "^3.2.0",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
