--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/components": "^10.2.1",
+    "@vueuse/core": "^10.2.1",
     "autoprefixer": "^10.4.13",
     "daisyui": "^2.46.1",
     "pinia": "^2.0.28",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4",
-    "v-click-outside": "^3.2.0",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
